2005-12-14  Julien Puydt  <jpuydt@free.fr>

	* src/sound_handling.cpp: Fixed sound events. Hello Linus!

2005-12-14  Damien Sandras  <dsandras@gnome.org>

	* src/misc.cpp: Fixed double-free.

2005-12-14  Damien Sandras  <dsandras@gnome.org>

	* src/misc.cpp: Cleanups. Hello Linus!

2005-12-14  Damien Sandras  <dsandras@gnome.org>

	* src/main_window.cpp, src/main_window.h: fixed the transfer dialog 
	so that the incoming call dialog is not hidden when cancel is selected.

	* src/urlhandler.cpp: fixed call forwarding.


2005-12-12  Julien Puydt  <jpuydt@free.fr>

	* lib/winpaths.h: Added G_BEGIN_DECL and G_END_DECL.

2005-12-12  Julien Puydt  <jpuydt@free.fr>

	* lib/Makefile.am, lib/e-splash.c, lib/winpaths.h, src/Makefile.am,
	src/callbacks.cpp, src/chat_window.cpp, src/druid.cpp, src/ils.cpp,
	src/log_window.cpp, src/main_window.cpp, src/pref_window.cpp,
	src/sound_handling.cpp, src/tools.cpp: Replaced DATADIR with DATA_DIR,
	since it collides with the name of a win32 system type that pwlib/opal
	leaks on us.

2005-12-12  Julien Puydt  <jpuydt@free.fr>

	* lib/winpaths.c: Better include.

2005-12-11  Damien Sandras  <dsandras@gnome.org>

	* src/druid.cpp, src/tools.cpp: s/pin/password for Johnny Strom.

2005-12-11  Damien Sandras  <dsandras@gnome.org>

	* src/accounts.cpp src/accounts.h src/druid.cpp src/tools.cpp:
	Added support for an authentication user name different from the user
	name in GM.

2005-12-11  Damien Sandras  <dsandras@gnome.org>

	* src/accounts.cpp, src/accounts.h, src/druid.cpp, src/endpoint.cpp,
	src/tools.cpp: Replaced login by username.

2005-12-11  Julien Puydt  <jpuydt@free.fr>

	* lib/winpaths.h, lib/winpaths.c: Allow gnomemeeting to find its
	sounds, pixmaps, locale and all on win32 whatever the installation
	directory is.
	* configure.in, lib/e-splash.c, lib/gm_conf-glib.c, lib/Makefile.am,
	src/callbacks.cpp, src/chat_window.cpp, src/druid.cpp, src/ils.cpp,
	src/log_window.cpp, src/main_window.cpp, src/pref_window.cpp,