@@ -1,3 +1,8 @@
+2005-12-15  Julien Puydt  <jpuydt@free.fr>
+
+	* lib/winpaths.c: Simplified the implementation by using glib. I love
+	glib. Thank you glib developpers !
+
 2005-12-14  Julien Puydt  <jpuydt@free.fr>
 
 	* src/sound_handling.cpp: Fixed sound events. Hello Linus!
